--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,6 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+}
+body{
+    font-family: sans-serif ;
 }
 li{
     list-style: none;
