--- a/CSS/main.css
+++ b/CSS/main.css
@@ -46,53 +46,107 @@ li{
     max-width: 80%;
     margin:auto;
 }
-.header{
+header{
     position: fixed;
-    background-color: #fff;
     top: 0;
     left: 0;
-    width: 100%;
+    right: 0;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 8%;
     z-index: 10;
     box-shadow: 0 1px 16px hsla(0, 0%, 0%, .20);
 }
-.nav-container{
+nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nav-menue__box,
-.nav-menue{
-    display: flex;
-    align-items: center;
-    column-gap: 1.5rem;
-
+header nav ul li {
+   position: relative;
+   float: left;
 }
-.nav-item{
-    padding: 20px 0;
-}
-.nav__link{
+header nav ul li a{
     position: relative;
-    color:#000000;
-    transition: color .3s;
-    padding: 20px 0;
+    padding: 20px ;
+    color: #000;
+    font-size: 16px;
+    display: block;
     text-decoration: none;
 }
-.nav__link::after{
+header nav ul li a::after{
     position: absolute;
     content: "";
     width: 0;
     height: 2px;
-    background-color:rgb(25, 25, 25);
-    bottom: .3rem;
-    left: 0;
-    transition: width .3s;
+    background-color: black;
+    right: 0;
+    bottom: .5rem;
+    transition: .3s;
+
 }
-.nav__link:hover::after{
+/* header nav ul li a::before{
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: black;
+    right: 0;
+    bottom: .3rem;
+    transition: .3s;
+} */
+header nav ul li a::after{
+    right: initial;
+    left: 0;
+}
+header nav ul li a:hover::after,
+header nav ul li a:hover::before{
     width: 100%;
 }
-.nav__link:active{
+nav ul li ul{
+    position: absolute;
+    left: 0;
+    width: 190px;
+    background-color: #fff;
+    display: none;
+    transition: dispaly  .3;
+}
+nav ul li:hover > ul{
+    display: initial;
+}
+
+nav ul li ul li {
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.034);
+}
+nav ul li ul li ul {
+    left: 189px;
+    top: 0;
+}
+
+.nav-btn{
+    border: none;
+    padding: 10px;
+    color: #fff;
+    background-color: rgba(0, 186, 252, 1);
+    border-radius: 5px;
+    margin-left: 16px;
+}
+.btn:active{
+    background-color: rgba(0, 186, 252, 0.6);
+
+}
+nav ul li a:active{
     background-color: rgba(25, 25, 25, 0.7);
     color: white;
+}
+nav ul li a:active::after{
+    background-color: rgba(25, 25, 25, 0.7);
+    color: white;
+    display: none;
+
 }
 /* home */
 .home-container{
@@ -136,6 +190,9 @@ li{
     margin-right: 24px;
     box-shadow: 0 1px 16px hsla(0, 0%, 0%, .20);
     border-radius: 5px;
+}
+.servisec-card:hover{
+    box-shadow: 0 1px 16px hsla(0, 0%, 0%, .25);
 }
 .card-title{
     margin-bottom: 15px;
